# Gotcha

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  LAUNCH.md  mixdown.py  pipeline.py  record_meeting.py  recorder_session.py  requirements.txt  test_interpretation_gemini.py  test_meeting_sarvam.py  vad.py
deploy/: .env.example  Caddyfile  docker-compose.yml
gotcha-desktop/: README.md  build-dmg.sh  clean-deeplink.sh  make-signing-cert.sh  package-lock.json  package.json
gotcha-desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
gotcha-desktop/src-tauri/src/: lib.rs  main.rs
mac_recorder/: Package.swift
mac_recorder/Sources/MeetingCaptureKit/: MeetingRecorder.swift  Permissions.swift  TrackWriter.swift  VoiceProcessingMic.swift
mac_recorder/Sources/mac-recorder/: Info.plist  main.swift
scripts/: mint_user.py
webapp/: auth.py  server.py  test_backend.py
webapp/static/: app.html  app.js  download.html  index.html  login.html  privacy.html  style.css  terms.html
